# spam-filter

./: .coverage  .gitignore  main.py  pyproject.toml  spam-filter.code-workspace
confs/: training.yaml
notebooks/: prototype.ipynb
src/spam_filter/: cleaning.py  config.py  datasets.py  evaluation.py  models.py  scripts.py  training.py
tests/:  test_cleaning.py  conftest.py  test_datasets.py  test_evaluation.py  test_models.py  test_scripts.py  test_training.py
